--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,6 @@ $RECYCLE.BIN/
 # Ignore dependencies and builds
 src/RemoteTech/*.dll
 *.zip
-GameData/RemoteTech/Plugins/RemoteTech.dll
-GameData/build.txt
+GameData/*
+saves/*
 src/RemoteTech/RemoteTech.sln.ide/
